--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,5 @@ authors = ["Ben Kimock <kimockb@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-libc = "0.2"
+libc = {version = "0.2", default-features = false}
 syscall = "0.2"
