--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,6 @@ authors = ["Ben Kimock <kimockb@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-libc = {version = "0.2", default-features = false}
+bitflags = "1.2"
 syscall = "0.2"
+libc = {version = "0.2", default-features = false}
