Updates from work on fls

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,9 @@ authors = ["Ben Kimock <kimockb@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-bitflags = "1.2"
 sc = "0.2"
-libc = {version = "0.2", default-features = false}
+bitflags = "1.2"
+libc = { version = "0.2", default-features = false }
+
+[dev-dependencies]
+itoa = { version = "0.4", default-features = false }
