Fill out Cargo.toml files

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,10 @@
 name = "veneer"
 version = "0.1.0"
 authors = ["Ben Kimock <kimockb@gmail.com>"]
+license = "MIT OR Apache-2.0"
+description = "A very thin std-like library that doesn't depend on libc"
+documentation = "https://docs.rs/veneer-macros"
+repository = "https://github.com/saethlin/veneer"
 edition = "2018"
 include = ["src/**/*.rs", "README.md", "LICENSE-MIT", "LICENSE-APACHE"]
 
