Paste in parts of compiler_builtins instead of depending on it

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,7 @@ veneer-macros = "0.1"
 
 [dev-dependencies]
 itoa = { version = "0.4", default-features = false }
+
+[features]
+mem = []
+default = ["mem"]
