cfg out enough things so that we get a clean error on unsupported OS

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,10 +10,12 @@ edition = "2018"
 include = ["src/**/*.rs", "README.md", "LICENSE-MIT", "LICENSE-APACHE"]
 
 [dependencies]
-sc = "0.2"
 bitflags = "2"
 libc = { version = "0.2", default-features = false }
 veneer-macros = "0.1"
+
+[target.'cfg(unix)'.dependencies]
+sc = "0.2"
 
 [dev-dependencies]
 itoa = { version = "1", default-features = false }
